metadata/objects/HR_Object_timemachine__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>HR_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>HR_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Date_Field__c</fullName>
        <label>Custom Date Field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>number1__c</fullName>
        <label>number1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number2__c</fullName>
        <label>number2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number3__c</fullName>
        <label>number3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>phone1__c</fullName>
        <label>phone1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>phone2__c</fullName>
        <label>phone2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>phone3__c</fullName>
        <label>phone3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>picklist1__c</fullName>
        <label>picklist1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>picklist2__c</fullName>
        <label>picklist2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>picklist3__c</fullName>
        <label>picklist3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>text1__c</fullName>
        <label>text1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text2__c</fullName>
        <label>text2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HR Object TimeMachine</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HR-{0000000000}</displayFormat>
        <label>HR Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HR Object TimeMachine</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>